# BlockAGI

./: main.py  pyproject.toml
blockagi/: __init__.py  resource_pool.py  run.py  schema.py
blockagi/chains/: __init__.py  base.py  compose.py  evaluate.py  narrate.py  plan.py  research.py
blockagi/tools/: duckduckgo.py  google.py  visitweb.py
blockagi/utils/: __init__.py  format_data.py  format_tools.py  pretty_prompt.py
